# Ari-BilgiAI

./: .gitignore  README.md
Kuru Temizlemeci/: .env.example  README.md  docker-compose.yml  requirements.txt
Kuru Temizlemeci/app/: main.py
Kuru Temizlemeci/app/api/: deps.py
Kuru Temizlemeci/app/api/v1/: router.py
Kuru Temizlemeci/app/api/v1/endpoints/: admin.py  auth.py  orders.py  traffic.py  users.py  vendor_panel.py  vendors.py
Kuru Temizlemeci/app/core/: config.py  security.py
Kuru Temizlemeci/app/db/: session.py
Kuru Temizlemeci/app/models/: __init__.py  address.py  order.py  user.py  vendor.py
Kuru Temizlemeci/app/schemas/: address.py  auth.py  common.py  order.py  user.py  vendor.py
Kuru Temizlemeci/app/services/: address_service.py  auth_service.py  notification_service.py  order_service.py  pricing_service.py  traffic_recognition_service.py  user_service.py  vendor_service.py
Kuru Temizlemeci/app/utils/: bootstrap.py
Kuru Temizlemeci/app/web/: routes.py
Kuru Temizlemeci/app/web/static/: app.js  index.html  styles.css
TrafikTanıma/: README.md  pyproject.toml  requirements.txt
TrafikTanıma/scripts/: bootstrap_venv.sh  trafiktanima
TrafikTanıma/src/traffic_recognition/: __main__.py  cli.py  db.py  ocr.py  pipeline.py  plates.py  source.py  ui_app.py
chatbot/: api_server.py  chatbot.py  requirements.txt
opencv/: README.md  anpr.py  requirements.txt
scripts/: cleanup_repo.sh  run_chatbot_api.sh
text/: README.md  comment_qa_bot.py  requirements.txt  youtube_comment_sentiment.py
